# devin-agent

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: config.py  llm.py  main.py  models.py
frontend/: index.html  script.js  style.css
