[project]
name = "devin-agent"
version = "1.0.0"
description = "LLM-powered chat agent with FastAPI backend and web UI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.40.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
